syntax = "proto3";

service Movie {
  //Get ALl movies from database
  rpc GetListMovies(Empty) returns (stream MovieData) {}

  // Get movie informations with it's ID
  rpc GetMovieByID(MovieID) returns (MovieData) {}  

  //Get movie informations with it's title
  rpc GetMovieByTitle(MovieTitle) returns (MovieData) {}

  //Add new movie
  rpc CreateMovie(MovieData) returns (Empty) {}

  //Delete a movie by it's ID
  rpc DeleteMovie(MovieID) returns (Empty) {}

  //Update a movie
  rpc UpdateMovieRating(MovieData) returns (Empty) {}
}

message MovieID {
  string id = 1;
}

message MovieTitle {
  string title = 1;
}

message MovieData {
  string title = 1;
  float rating = 2;
  string director = 3;
  string id = 4;
}

message Empty {
}